--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,20 @@
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
+        "laravel/passport": "^8.4",
         "laravel/tinker": "^2.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
+        "friendsofphp/php-cs-fixer": "^2.16",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5"
+        "nunomaduro/larastan": "^0.5.5",
+        "phpstan/phpstan-mockery": "^0.12.3",
+        "phpstan/phpstan-phpunit": "^0.12.6",
+        "phpunit/phpunit": "^8.5",
+        "squizlabs/php_codesniffer": "^3.5"
     },
     "config": {
         "optimize-autoloader": true,
@@ -58,6 +64,12 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "check": [
+            "vendor/bin/phpcs app tests --extensions=php --colors --warning-severity=5",
+            "vendor/bin/php-cs-fixer fix --diff --ansi",
+            "vendor/bin/phpstan analyze",
+            "vendor/bin/phpunit --color=always"
         ]
     }
 }
